# Company-Bankruptcy-Prediction

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml  tasks.py
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  usage.rst
notebooks/: explore_dataset.ipynb
src/: __init__.py  cli.py  company_bankruptcy_predictor.py  main.py
src/data/: make_dataset.py
src/features/: transformations.py
tests/: __init__.py  test_company_bankruptcy_predictor.py
