[tool]
[tool.poetry]
name = "company_bankruptcy_predictor"
version = "0.1.0"
homepage = "https://github.com/ashishthanki/company_bankruptcy_predictor"
description = "Top-level package for Company Bankruptcy Predictor."
authors = ["Ashish Thanki"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
]
packages = [
    { include = "src" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "3.10.11"
click = "*"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
numpy = "^1.24.2"
seaborn = "^0.12.2"
synergy = "^0.5.1"
jupyterlab = "^3.6.3"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = ">=7.2.0"
sphinx = ">=5.3.0"
black = "*"

[tool.poetry.scripts]
company_bankruptcy_predictor = 'company_bankruptcy_predictor.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
